# luthien_control

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CURSOR_CONTEXT.md  DEVELOPMENT_LOG.md  Dockerfile  Makefile  Procfile  README.md  alembic.ini  codecov.yml  docker-compose.loki.yml  docker-compose.yml  fly.toml  index.html  mkdocs.yml  objects.inv  openai_api_endpoints.json  pyproject.toml  railway.toml  run.py  sample_policy.json  test-file-please-ignore  test_decode.py
.cursor/rules/: RuleTypeAgentRequested.mdc  RuleTypeAutoAttached.mdc  RuleTypeManual.mdc  ai_tdd_workflow.mdc  change_guidelines.mdc  code_hygiene.mdc  code_modification_principles.mdc  config_and_secrets.mdc  current_plan_tracking.mdc  dev_tracking.mdc  development_workflow.mdc  documentation_style.mdc  edit_verification_protocol.mdc  exception_handling.mdc  fail_hard.mdc  fastapi-best-practices.mdc  git_commit_strategy.mdc  google-style-docstrings.mdc  poetry.mdc  policy_test_locations.mdc  project_organization.mdc  pytest_interpretation.mdc  qc.mdc  rule_management.mdc  rule_types.mdc  security_practices.mdc  tdd.mdc  test_failure_resolution_guidelines.mdc  test_writing_guidelines.mdc
.github/workflows/: check_changelog_release.yml  code-quality.yml  codeql.yml  create-tag-on-merge.yml  deploy-docs.yml  ruff_format.yml
alembic/: env.py
alembic/versions/: 50deccdf11ab_create_luthien_log_table.py  6e27f83a84ac_initial_sqlmodel_tables.py  93bd05330754_add_root_compoundpolicy.py  93bd05330754_revised_add_root_policy.py  ab5c8efa5a4b_add_root_policy_data.py  e19a50fe197b_rename_policy_class_path_to_type_and_.py  e645181881c9_fix_root_policy_structure.py  f1169c4032e9_add_admin_user_and_session_tables.py
css/: api_styles.css
cursor/rules/: poetry.mdc
db/: run_migrations.py  schema_v1.sql
db/migrations/: 001_initial_schema.sql  002_add_migration_tracking_table.sql  003_update_policies_table.sql  004_add_standard_flow_policy.sql  005_create_client_api_keys_table.sql
dev/: CURSOR_CONTEXT.md  DEVELOPMENT_LOG.md  ProjectGoal.md  ProjectPlan.md  ToDo.md  UseCases.md  asgi_fix_plan.md  current_context.md  dev_test_proxy.py  development_log.md  error_handling_strategy.md  luthien_cursor_failure_analysis.md  openai_chat_completions_streaming_response.md  policy_application_framework.md  policy_refactor_plan.md  pyright_fixes_plan.md  refactor_dependency_injection.md  session_management_rationale.md  streaming_response_plan.md  transaction_processing_framework.md
dev/archive/: COMPLETE - policy_refactor_plan.md  COMPLETE - simplify_orchestration_plan.md  COMPLETE - sqlmodel_migration.md  COMPLETE - streaming_response_plan.md  COMPLETE_ENOUGH - policy_application_framework.md
dev/log_archive/: development_log_20250409_113634.md  development_log_20250423_110617.md  development_log_20250424_175637.md
dev/scripts/: init_main_db.py  rotate_dev_log.sh  set_fly_secrets.sh
docs/: index.md
docs/css/: custom_toc.css
docs/designs/: pipeline_architecture.md
docs/examples/: comparison_conditions_usage.md  model_name_replacement_policy.md
docs/js/: custom_toc.js
examples/model_name_replacement_policy/: index.html
logs/: api.bson
luthien_control/: LICENSE  __init__.py  __main__.py  custom_openapi_schema.py  dependencies.py  dependency_container.py  exceptions.py  logging_config.py  main.py  policy_loader.py  run.py  settings.py  utils.py
luthien_control/admin/: __init__.py  auth.py  dependencies.py  router.py
luthien_control/config/: settings.py
luthien_control/control_policy/: __init__.py  add_api_key_header.py  add_api_key_header_from_env.py  add_header_from_env.py  backend_call_policy.py  branching_policy.py  client_api_key_auth.py  compound_policy.py  control_policy.py  exceptions.py  fail_response.json  increment_integers_policy.py  initialize_context.py  interface.py  leaked_api_key_detection.py  loader.py  model_name_replacement.py  noop_policy.py  prepare_backend_headers.py  registry.py  request_logging.py  send_backend_request.py  serial_policy.py  serialization.py  set_backend_policy.py  simple_response_builder.py  streaming_policy.py  transaction_context_logging_policy.py  tx_logging_policy.py
luthien_control/control_processors/: add_api_key_header.py  apply_request_policy.py
luthien_control/core/: context.py  dependencies.py  dependency_container.py  (+14 more)
monitoring/: README.md
pdoc_templates/: module.html.jinja2
scratch/: dev_test_sdk.py  mytest.py  scratch.ipynb  test_sdk.py
scripts/: README_TEST_SCRIPTS.md  add_api_key.py  capture_raw_openai_stream.py  create_sqlmodel_db.sh  create_sqlmodel_tables.py  debug_openai_responses.py  format_with_unsafe.py  generate_alembic_migration.py  generate_root_policy_config.py  get_root_policy.py  get_root_policy_json.py  init_main_db.py  inspect_e2e_db_policy.py  list_all_policies.py  list_api_keys.py  list_policies.py  rotate_dev_log.sh  show_current_policy.py  sqlmodel_setup_commands.md  start_dev_server_with_logging.py  start_monitoring.sh  temp_list_policies.py  test_asyncstream_simulation.py  test_logging.py  test_loki_logging.py  test_streaming_logging.py  test_streaming_policy.json  update_e2e_db_policy.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_custom_openapi_schema.py  test_dependencies.py  test_dependency_container.py  test_logging.py  test_logging_config.py  test_logging_loki.py  test_main.py  test_policy_loader.py  test_run.py  test_utils.py
(+282 files in other folders)
