[project]
name = "luthien-control"
version = "0.1.0"
description = "Intelligent proxy server for AI APIs"
authors = [
    {name = "Jai Dhyani",email = "jai@luthienresearch.org"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.11.2"
bandit = "^1.8.3"
respx = "^0.22.0"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
markers = [
    "integration: marks tests as integration tests (excluded by default)",
    "unit: marks tests as unit tests (run by default)"
]
addopts = "-m 'not integration'"
